--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -832,7 +832,7 @@
     "    for i in range(target):\n",
     "        arr = cycle(arr)\n",
     "        if (rs := repeated.setdefault(arr.data.tobytes(), i)) != i:\n",
-    "            i = ((target-rs)//(i-rs))*(i-rs) + rs + 1\n",
+    "            i = ((target-rs)//(i-rs))*(i-rs) + rs +1 # potential bug here where before the +1 i is exactly at the target\n",
     "            break\n",
     "    for i in range(i, target):\n",
     "        arr = cycle(arr)\n",
@@ -844,10 +844,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1320"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data15 = list(itertools.chain.from_iterable(data(15, lambda x: x.split(','))))\n",
+    "\n",
+    "def advent_hash(input):\n",
+    "    value = 0\n",
+    "    for i in input:\n",
+    "        value += ord(i)\n",
+    "        value *= 17\n",
+    "        value %= 256\n",
+    "    return value\n",
+    "\n",
+    "sum([advent_hash(i) for i in data15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<function day15.<locals>.<lambda> at 0x7f4b75edaca0>, {0: dict_values([rn 1])}) rn=1\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'delete'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 61\u001b[0m\n\u001b[1;32m     58\u001b[0m         advent_hash_map(\u001b[38;5;28minput\u001b[39m)\n\u001b[1;32m     59\u001b[0m         \u001b[38;5;28mprint\u001b[39m(boxes, \u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m---> 61\u001b[0m \u001b[43mday15\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata15\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[29], line 58\u001b[0m, in \u001b[0;36mday15\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     55\u001b[0m             boxes[box]\u001b[38;5;241m.\u001b[39mpush(label, flength)\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28minput\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m---> 58\u001b[0m     \u001b[43madvent_hash_map\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28mprint\u001b[39m(boxes, \u001b[38;5;28minput\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[29], line 48\u001b[0m, in \u001b[0;36mday15.<locals>.advent_hash_map\u001b[0;34m(input)\u001b[0m\n\u001b[1;32m     46\u001b[0m     label \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     47\u001b[0m     box \u001b[38;5;241m=\u001b[39m advent_hash(label)\n\u001b[0;32m---> 48\u001b[0m     \u001b[43mbox\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m(label)                \n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     50\u001b[0m     label, flength \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'delete'"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, label, value, head=None, tail=None):\n",
+    "        self.label = label\n",
+    "        self.value = value\n",
+    "        self.head = head\n",
+    "        self.tail = tail\n",
+    "\n",
+    "    def delete(self):\n",
+    "        if self.head:\n",
+    "            self.head.tail = self.tail\n",
+    "        if self.tail:\n",
+    "            self.tail.head = self.head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f'{self.label} {self.value}'\n",
+    "\n",
+    "class Box:\n",
+    "    def __init__(self):\n",
+    "        self.tail = None\n",
+    "        self.nodes = {}\n",
+    "\n",
+    "    def get(self, label):\n",
+    "        return self.nodes.get(label)\n",
+    "    \n",
+    "    def push(self, label, value):\n",
+    "        node = Node(label, value, self.tail)\n",
+    "        self.nodes[label] = node\n",
+    "        self.tail = node\n",
+    "\n",
+    "    def delete(self, label):\n",
+    "        if self.nodes.get(label):\n",
+    "            node = self.nodes[label]\n",
+    "            if node == self.tail:\n",
+    "                self.tail = node.head\n",
+    "            node.delete()\n",
+    "            del self.nodes[label]\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.nodes.values())\n",
+    "\n",
+    "def day15(data):\n",
+    "    boxes = defaultdict(lambda: Box())\n",
+    "\n",
+    "    def advent_hash_map(input):\n",
+    "        if input[-1] == '-':     \n",
+    "            label = input[:-1]\n",
+    "            box = advent_hash(label)\n",
+    "            boxes[box].delete(label)                \n",
+    "        else:\n",
+    "            label, flength = input.split('=')\n",
+    "            box = advent_hash(label)\n",
+    "            if lens := boxes[box].get(label):\n",
+    "                lens.value = int(flength)\n",
+    "            else:\n",
+    "                boxes[box].push(label, flength)\n",
+    "\n",
+    "    for input in data:\n",
+    "        advent_hash_map(input)\n",
+    "        print(boxes, input)\n",
+    "        \n",
+    "day15(data15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('a')"
+   ]
   }
  ],
  "metadata": {
