--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict, Counter, deque\n",
+    "from collections import defaultdict, Counter, deque, OrderedDict\n",
     "from intervaltree import Interval, IntervalTree\n",
     "import itertools\n",
     "import functools\n",
@@ -844,16 +844,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1320"
+       "501680"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,28 +874,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function day15.<locals>.<lambda> at 0x7f4b75edaca0>, {0: dict_values([rn 1])}) rn=1\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'delete'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 61\u001b[0m\n\u001b[1;32m     58\u001b[0m         advent_hash_map(\u001b[38;5;28minput\u001b[39m)\n\u001b[1;32m     59\u001b[0m         \u001b[38;5;28mprint\u001b[39m(boxes, \u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m---> 61\u001b[0m \u001b[43mday15\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata15\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[29], line 58\u001b[0m, in \u001b[0;36mday15\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     55\u001b[0m             boxes[box]\u001b[38;5;241m.\u001b[39mpush(label, flength)\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28minput\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m---> 58\u001b[0m     \u001b[43madvent_hash_map\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28mprint\u001b[39m(boxes, \u001b[38;5;28minput\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[29], line 48\u001b[0m, in \u001b[0;36mday15.<locals>.advent_hash_map\u001b[0;34m(input)\u001b[0m\n\u001b[1;32m     46\u001b[0m     label \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     47\u001b[0m     box \u001b[38;5;241m=\u001b[39m advent_hash(label)\n\u001b[0;32m---> 48\u001b[0m     \u001b[43mbox\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m(label)                \n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     50\u001b[0m     label, flength \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'delete'"
-     ]
+     "data": {
+      "text/plain": [
+       "145"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -940,24 +930,29 @@
     "        return str(self.nodes.values())\n",
     "\n",
     "def day15(data):\n",
-    "    boxes = defaultdict(lambda: Box())\n",
+    "    boxes = defaultdict(lambda: OrderedDict())\n",
     "\n",
     "    def advent_hash_map(input):\n",
     "        if input[-1] == '-':     \n",
     "            label = input[:-1]\n",
     "            box = advent_hash(label)\n",
-    "            boxes[box].delete(label)                \n",
+    "            if label in boxes[box]:\n",
+    "                del boxes[box][label]   \n",
     "        else:\n",
-    "            label, flength = input.split('=')\n",
+    "            label, value = input.split('=')\n",
     "            box = advent_hash(label)\n",
-    "            if lens := boxes[box].get(label):\n",
-    "                lens.value = int(flength)\n",
-    "            else:\n",
-    "                boxes[box].push(label, flength)\n",
+    "            boxes[box][label] = int(value)\n",
     "\n",
     "    for input in data:\n",
     "        advent_hash_map(input)\n",
-    "        print(boxes, input)\n",
+    "        # print(boxes, input)\n",
+    "\n",
+    "    result = 0\n",
+    "    for box in boxes:\n",
+    "        for i, label in enumerate(boxes[box]):\n",
+    "            # print(box, i, label)\n",
+    "            result += (box+1) * (i+1) * boxes[box][label]\n",
+    "    return result\n",
     "        \n",
     "day15(data15)"
    ]
