--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -834,7 +834,7 @@
     "        if (rs := repeated.setdefault(arr.data.tobytes(), i)) != i:\n",
     "            i = ((target-rs)//(i-rs))*(i-rs) + rs +1 # potential bug here where before the +1 i is exactly at the target\n",
     "            break\n",
-    "    for i in range(i, target):\n",
+    "    for i in range(i, target): # should just figure out the number directly by pulling from repeated\n",
     "        arr = cycle(arr)\n",
     "\n",
     "    return calculate_weight(arr)\n",
@@ -844,16 +844,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "501680"
+       "(501680, 241094)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,66 +868,6 @@
     "        value *= 17\n",
     "        value %= 256\n",
     "    return value\n",
-    "\n",
-    "sum([advent_hash(i) for i in data15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "145"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Node:\n",
-    "    def __init__(self, label, value, head=None, tail=None):\n",
-    "        self.label = label\n",
-    "        self.value = value\n",
-    "        self.head = head\n",
-    "        self.tail = tail\n",
-    "\n",
-    "    def delete(self):\n",
-    "        if self.head:\n",
-    "            self.head.tail = self.tail\n",
-    "        if self.tail:\n",
-    "            self.tail.head = self.head\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return f'{self.label} {self.value}'\n",
-    "\n",
-    "class Box:\n",
-    "    def __init__(self):\n",
-    "        self.tail = None\n",
-    "        self.nodes = {}\n",
-    "\n",
-    "    def get(self, label):\n",
-    "        return self.nodes.get(label)\n",
-    "    \n",
-    "    def push(self, label, value):\n",
-    "        node = Node(label, value, self.tail)\n",
-    "        self.nodes[label] = node\n",
-    "        self.tail = node\n",
-    "\n",
-    "    def delete(self, label):\n",
-    "        if self.nodes.get(label):\n",
-    "            node = self.nodes[label]\n",
-    "            if node == self.tail:\n",
-    "                self.tail = node.head\n",
-    "            node.delete()\n",
-    "            del self.nodes[label]\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return str(self.nodes.values())\n",
     "\n",
     "def day15(data):\n",
     "    boxes = defaultdict(lambda: OrderedDict())\n",
@@ -945,37 +885,24 @@
     "\n",
     "    for input in data:\n",
     "        advent_hash_map(input)\n",
-    "        # print(boxes, input)\n",
     "\n",
     "    result = 0\n",
     "    for box in boxes:\n",
     "        for i, label in enumerate(boxes[box]):\n",
     "            # print(box, i, label)\n",
     "            result += (box+1) * (i+1) * boxes[box][label]\n",
-    "    return result\n",
+    "\n",
+    "    return sum([advent_hash(i) for i in data]), result\n",
     "        \n",
     "day15(data15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "97"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('a')"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
