--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -60,8 +60,6 @@
     "        sum += int(first + last)\n",
     "    return sum\n",
     "\n",
-    "print(day1(lambda x: re.findall(r'\\d', x)))\n",
-    "\n",
     "def part2match(x):\n",
     "    change = {\n",
     "        'one': '1',\n",
@@ -77,29 +75,21 @@
     "    matched = re.findall(r'(?=(\\d|one|two|three|four|five|six|seven|eight|nine))', x)\n",
     "    return [change[match] if match in change else match for match in matched]\n",
     "\n",
-    "day1(part2match)\n",
-    "    "
+    "day1(lambda x: re.findall(r'\\d', x)), day1(part2match)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2377\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "71220"
+       "(2377, 71220)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,8 +117,6 @@
     "        result += i+1\n",
     "    return result\n",
     "\n",
-    "print(day2_1((14, 13, 12)))\n",
-    "\n",
     "def day2_2():\n",
     "    result = 0\n",
     "    for game in data2:\n",
@@ -136,7 +124,7 @@
     "        result += functools.reduce(lambda x, y: x*y, requirements, 1)\n",
     "    return result\n",
     "\n",
-    "day2_2()"
+    "day2_1((14, 13, 12)), day2_2()"
    ]
   },
   {
@@ -385,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18673"
+       "(18673, 17972669116327)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,33 +406,13 @@
     "            break\n",
     "    return count\n",
     "\n",
-    "day8(*data8, 'AAA', lambda x: x == 'ZZZ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17972669116327"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def day8_2(instructions, nodes):\n",
     "    results = []\n",
     "    for start in filter(lambda x: re.match(r'..A', x), nodes):\n",
     "        results.append(day8(instructions, nodes, start, lambda x: re.match(r'..Z', x)))\n",
     "    return math.lcm(*results)\n",
     "\n",
-    "day8_2(*data8)"
+    "day8(*data8, 'AAA', lambda x: x == 'ZZZ'), day8_2(*data8)"
    ]
   },
   {
@@ -899,33 +867,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data16 = np.array(data(16, list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6883"
+       "(6883, 7228)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data16 = np.array(data(16, list))\n",
     "\n",
-    "\n",
-    "def day16(data, start=(0, 1)):\n",
+    "def day16(data):\n",
     "    ymax, xmax = data.shape\n",
     "\n",
     "    def beam(pos, dir):\n",
@@ -938,71 +897,39 @@
     "                if dir.real:\n",
     "                    return [(pos+1j, 1j), (pos-1j, -1j)]\n",
     "            case '/':\n",
-    "                # print('a', pos, dir)\n",
     "                dir = (-1 if dir.real else 1) * 1j*dir\n",
     "            case '\\\\':\n",
-    "                # print('b', pos, dir)\n",
     "                dir = (-1 if dir.imag else 1) * 1j*dir\n",
     "        return [(pos+dir, dir)]\n",
+    "\n",
+    "    def shoot(start=(0, 1)):\n",
+    "        visited, q = set([start]), deque([start])\n",
+    "        while q:\n",
+    "            pos, dir = q.popleft()\n",
+    "            for p, d in beam(pos, dir):\n",
+    "                if p.real < 0 or p.real >= xmax or p.imag < 0 or p.imag >= ymax:\n",
+    "                    continue\n",
+    "                if (p, d) in visited:\n",
+    "                    continue\n",
+    "                visited.add((p, d))\n",
+    "                q.append((p, d))\n",
+    "\n",
+    "        return len(set([p for p, _ in visited]))\n",
     "    \n",
-    "\n",
-    "    visited, q = set([start]), deque([start])\n",
-    "    while q:\n",
-    "        pos, dir = q.popleft()\n",
-    "        for p, d in beam(pos, dir):\n",
-    "            if p.real < 0 or p.real >= xmax or p.imag < 0 or p.imag >= ymax:\n",
-    "                continue\n",
-    "            if (p, d) in visited:\n",
-    "                continue\n",
-    "            visited.add((p, d))\n",
-    "            q.append((p, d))\n",
-    "\n",
-    "    # print(visited)\n",
-    "    return len(set([p for p, _ in visited]))\n",
-    "\n",
-    "lit = day16(data16)\n",
-    "\n",
-    "def visualize(arr, vmap):\n",
-    "    visual = arr.copy()\n",
-    "    for i in vmap:\n",
-    "        x, y = int(i.real), int(i.imag)\n",
-    "        visual[y, x] = '#'\n",
-    "    print(visual)\n",
-    "\n",
-    "# print(data16, len(lit))\n",
-    "# visualize(data16, lit)\n",
+    "    part1 = shoot()\n",
+    "    maxlr = max([max(shoot((i*1j, 1)), shoot((xmax-1+i*1j, -1))) for i in range(ymax)])\n",
+    "    maxud = max([max(shoot((i, -1j)), shoot((i+(ymax-1)*1j, 1j))) for i in range(ymax)])\n",
+    "    return part1, max(maxlr, maxud)\n",
     "\n",
     "day16(data16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7228"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day16_2(data):\n",
-    "    y, x = data.shape\n",
-    "    ymax, xmax = y-1, x-1\n",
-    "\n",
-    "    maxlr = max([max(day16(data, (i*1j, 1)), day16(data, (xmax+i*1j, -1))) for i in range(ymax)])\n",
-    "    maxud = max([max(day16(data, (i, -1j)), day16(data, (i+ymax*1j, 1j))) for i in range(ymax)])\n",
-    "\n",
-    "    return max(maxlr, maxud)\n",
-    "\n",
-    "day16_2(data16)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
