--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from intervaltree import Interval, IntervalTree\n",
     "import itertools\n",
     "import functools\n",
+    "import heapq\n",
     "import math\n",
     "import numpy as np\n",
     "import re\n",
@@ -27,23 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55816\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "54980"
+       "(55816, 54980)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +204,7 @@
     "            cards[i+1+n] += cards[i]+1\n",
     "    return result, cards.total() + len(data)\n",
     "\n",
-    "day4(data4)\n"
+    "day4(data4)"
    ]
   },
   {
@@ -502,7 +496,7 @@
     "            arr[y, x] = pipe\n",
     "    return x, y\n",
     "\n",
-    "def dijkstra(nodes, start, get_neighbors, end_condition=lambda _: False):\n",
+    "def dfs(nodes, start, get_neighbors, end_condition=lambda _: False):\n",
     "    q, visited = deque([(start, 0)]), {}\n",
     "    while q:\n",
     "        current, distance = q.popleft()\n",
@@ -524,7 +518,7 @@
     "def day10_1(data):\n",
     "    arr = data.copy()\n",
     "    start = fix_pipe_start(arr)\n",
-    "    visited, _ = dijkstra(data, start, lambda _, coords: pipe_neighbors(arr[coords[1], coords[0]], *coords))\n",
+    "    visited, _ = dfs(data, start, lambda _, coords: pipe_neighbors(arr[coords[1], coords[0]], *coords))\n",
     "    # visualize(arr, visited)\n",
     "    return visited\n",
     "\n",
@@ -926,10 +920,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data17 = np.array(data(17, lambda x: list(map(int, x))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 4 1 3 4 3 2 3 1 1 3 2 3]\n",
+      " [3 2 1 5 4 5 3 5 3 5 6 2 3]\n",
+      " [3 2 5 5 2 4 5 6 5 4 2 5 4]\n",
+      " [3 4 4 6 5 8 5 8 4 5 4 5 2]\n",
+      " [4 5 4 6 6 5 7 8 6 7 5 3 6]\n",
+      " [1 4 3 8 5 9 8 7 9 8 4 5 4]\n",
+      " [4 4 5 7 8 7 6 9 8 7 7 6 6]\n",
+      " [3 6 3 7 8 7 7 9 7 9 6 5 3]\n",
+      " [4 6 5 4 9 6 7 9 8 6 8 8 7]\n",
+      " [4 5 6 4 6 7 9 9 8 6 4 5 3]\n",
+      " [1 2 2 4 6 8 6 8 6 5 5 6 3]\n",
+      " [2 5 4 6 5 4 8 8 8 7 7 3 5]\n",
+      " [4 3 2 2 6 7 4 6 5 5 5 3 3]]\n",
+      "12 12\n",
+      "(12+12j) 1 0\n",
+      "[[ 0  4  5  8 12 23 25 28 29 30 33 43 46]\n",
+      " [ 3  5  6 11 15 20 23 33 32 35 39 41 44]\n",
+      " [ 6  7 11 16 17 21 26 32 37 39 41 46 48]\n",
+      " [ 9 11 15 21 22 29 31 39 41 44 45 50 50]\n",
+      " [13 16 19 25 28 33 38 46 47 51 50 53 56]\n",
+      " [21 20 22 30 33 42 46 53 62 62 54 58 60]\n",
+      " [25 29 27 34 42 49 52 61 69 68 61 64 70]\n",
+      " [28 34 30 37 45 52 59 70 76 77 75 69 72]\n",
+      " [32 38 43 41 50 56 63 72 84 83 83 77 79]\n",
+      " [36 41 47 45 51 58 67 76 92 89 87 87 82]\n",
+      " [44 43 45 49 55 63 73 81 87 92 92 91 85]\n",
+      " [46 48 49 55 60 64 72 80 88  7  7 93 90]\n",
+      " [50 51 51 53 59 66 70 86 91 96  5 96 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Crucible:\n",
+    "    # position, velocity, step\n",
+    "    def __init__(self, p, v, s):\n",
+    "        self.p = p\n",
+    "        self.v = v\n",
+    "        self.s = s\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return self.s < other.s\n",
+    "    \n",
+    "    def __repr__(self) -> str:\n",
+    "        return f'{self.p} {self.v} {self.s}'\n",
+    "\n",
+    "def dijkstra(\n",
+    "    nodes, \n",
+    "    start, \n",
+    "    get_neighbors, \n",
+    "    end_condition=lambda _: False, \n",
+    "    node_key = lambda x: x\n",
+    "):\n",
+    "    q, visited = [[0, start]], {}\n",
+    "    while q:\n",
+    "        distance, current = heapq.heappop(q)\n",
+    "        if node_key(current) in visited:\n",
+    "            # print('visited', current)\n",
+    "            continue\n",
+    "\n",
+    "        visited[node_key(current)] = distance\n",
+    "        if end_condition(current):\n",
+    "            # print('done', current)\n",
+    "            return visited, current\n",
+    "        for node in get_neighbors(nodes, current, distance):\n",
+    "            # print('new', node)\n",
+    "            heapq.heappush(q, node)\n",
+    "        # print(visited)\n",
+    "    return visited, None\n",
+    "\n",
+    "def day17(data):\n",
+    "    print(data)\n",
+    "    ymax, xmax = data.shape\n",
+    "    start = Crucible(0, 0, 0)\n",
+    "\n",
+    "    def end_condition(node):\n",
+    "        y, x = int(node.p.imag), int(node.p.real)\n",
+    "        if y == ymax-1 and x == xmax-1:\n",
+    "            print(y, x)\n",
+    "            return True\n",
+    "        \n",
+    "    def node_key(node):\n",
+    "        return node.p\n",
+    "\n",
+    "    def get_neighbors(arr, current, distance):\n",
+    "        moves = [1, -1, 1j, -1j]\n",
+    "        if current.s > 2:\n",
+    "            print(current.s, current.p)\n",
+    "            moves = filter(lambda x: x != current.v, moves)\n",
+    "\n",
+    "        nodes = []\n",
+    "        for v in moves:\n",
+    "            node = Crucible(current.p+v, v, 0 if v != current.v else current.s+1)\n",
+    "            y, x = int(node.p.imag), int(node.p.real)\n",
+    "            # print('hmm', y, x, d)\n",
+    "            if y >= 0 and x >= 0 and y < ymax and x < xmax:\n",
+    "                nodes.append((distance + arr[y, x], node))\n",
+    "        # print('?', nodes)\n",
+    "        return nodes\n",
+    "    \n",
+    "    return dijkstra(data, start, get_neighbors, end_condition, node_key)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "results, current = day17(data17)\n",
+    "\n",
+    "print(current)\n",
+    "\n",
+    "def heat_map(data, distances):\n",
+    "    arr = data.copy()\n",
+    "    y, x = arr.shape\n",
+    "    for i in range(y):\n",
+    "        for j in range(x):\n",
+    "            key = i*1j + j\n",
+    "            if key in distances:\n",
+    "                arr[i, j] = distances[i*1j + j]\n",
+    "    return arr\n",
+    "\n",
+    "print(heat_map(data17, results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data17[12, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 13)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data17.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'complex' and 'complex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241;43m1\u001b[39;49m\u001b[43mj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43mj\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'complex' and 'complex'"
+     ]
+    }
+   ],
+   "source": [
+    "1j < 2j"
+   ]
   }
  ],
  "metadata": {
