--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,32 @@
     "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
     "  with open(f\"./data/day{day}.txt\") as f:\n",
     "    return [parser(line.strip()) for line in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(nodes, start, get_neighbors, end_condition=lambda _: False):\n",
+    "    q, visited = deque([(start, 0)]), {}\n",
+    "    while q:\n",
+    "        current, distance = q.popleft()\n",
+    "        if end_condition(current):\n",
+    "            return visited, current\n",
+    "        if current in visited:\n",
+    "            continue\n",
+    "        for node in get_neighbors(nodes, current):\n",
+    "            q.append((node, distance+1))\n",
+    "        visited[current] = distance\n",
+    "    return visited, None\n",
+    "\n",
+    "def visualize(arr, vmap):\n",
+    "    visual = arr.copy()\n",
+    "    for x, y in vmap:\n",
+    "        visual[y, x] = vmap[(x, y)]\n",
+    "    print(visual)"
    ]
   },
   {
@@ -386,25 +412,6 @@
     "            arr[y, x] = pipe\n",
     "    return x, y\n",
     "\n",
-    "def dfs(nodes, start, get_neighbors, end_condition=lambda _: False):\n",
-    "    q, visited = deque([(start, 0)]), {}\n",
-    "    while q:\n",
-    "        current, distance = q.popleft()\n",
-    "        if end_condition(current):\n",
-    "            return visited, current\n",
-    "        if current in visited:\n",
-    "            continue\n",
-    "        for node in get_neighbors(nodes, current):\n",
-    "            q.append((node, distance+1))\n",
-    "        visited[current] = distance\n",
-    "    return visited, None\n",
-    "\n",
-    "def visualize(arr, vmap):\n",
-    "    visual = arr.copy()\n",
-    "    for x, y in vmap:\n",
-    "        visual[y, x] = vmap[(x, y)]\n",
-    "    print(visual)\n",
-    "\n",
     "def day10_1(data):\n",
     "    arr = data.copy()\n",
     "    start = fix_pipe_start(arr)\n",
@@ -744,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +760,7 @@
        "(1039, 1201)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,10 +849,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 6 0 9 38 {0: '(#7a21e3)', 1: '(#70c710)', 2: '(#70c710)', 3: '(#70c710)', 4: '(#70c710)', 5: '(#70c710)', 6: '(#70c710)', (6+1j): '(#0dc571)', (6+2j): '(#0dc571)', (6+3j): '(#0dc571)', (6+4j): '(#0dc571)', (6+5j): '(#0dc571)', (5+5j): '(#5713f0)', (4+5j): '(#5713f0)', (4+6j): '(#d2c081)', (4+7j): '(#d2c081)', (5+7j): '(#59c680)', (6+7j): '(#59c680)', (6+8j): '(#411b91)', (6+9j): '(#411b91)', (5+9j): '(#8ceee2)', (4+9j): '(#8ceee2)', (3+9j): '(#8ceee2)', (2+9j): '(#8ceee2)', (1+9j): '(#8ceee2)', (1+8j): '(#caa173)', (1+7j): '(#caa173)', 7j: '(#1b58a2)', 6j: '(#caa171)', 5j: '(#caa171)', (1+5j): '(#7807d2)', (2+5j): '(#7807d2)', (2+4j): '(#a77fa3)', (2+3j): '(#a77fa3)', (2+2j): '(#a77fa3)', (1+2j): '(#015232)', 2j: '(#015232)', 1j: '(#7a21e3)'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "62"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data18 = data(18, lambda x: x.split())\n",
+    "\n",
+    "def day18(data):\n",
+    "    borders, current = {0: data[0][0]}, 0\n",
+    "    minx, miny, maxx, maxy = 0, 0, 0, 0\n",
+    "\n",
+    "    diffs = {\n",
+    "        'R': 1,\n",
+    "        'D': 1j,\n",
+    "        'L': -1,\n",
+    "        'U': -1j\n",
+    "    }\n",
+    "\n",
+    "    area = 0\n",
+    "    for dir, length, color in data:\n",
+    "        length = int(length)\n",
+    "        diff = diffs[dir]\n",
+    "        for i in range(length):\n",
+    "            current += diff\n",
+    "            borders[current] = color\n",
+    "            area += 1\n",
+    "        y, x = int(current.imag), int(current.real)\n",
+    "        minx, miny, maxx, maxy = min(minx, x), min(miny, y), max(maxx, x), max(maxy, y)\n",
+    "\n",
+    "    # print(minx, maxx, miny, maxy, area, borders)\n",
+    "\n",
+    "    def get_neighbors(borders, node):\n",
+    "        for i in [1, -1, 1j, -1j]:\n",
+    "            if node + i not in borders:\n",
+    "                yield node + i\n",
+    "    fill, _ = dfs(borders, 1+1j, get_neighbors)\n",
+    "\n",
+    "    return area + len(fill)\n",
+    "        \n",
+    "day18(data18)\n",
+    "\n",
+    "# wrong 43026 too high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'X' in 'LD'"
+   ]
   }
  ],
  "metadata": {
