--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -849,23 +849,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 6 0 9 38 {0: '(#7a21e3)', 1: '(#70c710)', 2: '(#70c710)', 3: '(#70c710)', 4: '(#70c710)', 5: '(#70c710)', 6: '(#70c710)', (6+1j): '(#0dc571)', (6+2j): '(#0dc571)', (6+3j): '(#0dc571)', (6+4j): '(#0dc571)', (6+5j): '(#0dc571)', (5+5j): '(#5713f0)', (4+5j): '(#5713f0)', (4+6j): '(#d2c081)', (4+7j): '(#d2c081)', (5+7j): '(#59c680)', (6+7j): '(#59c680)', (6+8j): '(#411b91)', (6+9j): '(#411b91)', (5+9j): '(#8ceee2)', (4+9j): '(#8ceee2)', (3+9j): '(#8ceee2)', (2+9j): '(#8ceee2)', (1+9j): '(#8ceee2)', (1+8j): '(#caa173)', (1+7j): '(#caa173)', 7j: '(#1b58a2)', 6j: '(#caa171)', 5j: '(#caa171)', (1+5j): '(#7807d2)', (2+5j): '(#7807d2)', (2+4j): '(#a77fa3)', (2+3j): '(#a77fa3)', (2+2j): '(#a77fa3)', (1+2j): '(#015232)', 2j: '(#015232)', 1j: '(#7a21e3)'}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "62"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,24 +866,38 @@
    "source": [
     "data18 = data(18, lambda x: x.split())\n",
     "\n",
-    "def day18(data):\n",
-    "    borders, current = {0: data[0][0]}, 0\n",
-    "    minx, miny, maxx, maxy = 0, 0, 0, 0\n",
-    "\n",
+    "def decode(data):\n",
     "    diffs = {\n",
     "        'R': 1,\n",
     "        'D': 1j,\n",
     "        'L': -1,\n",
     "        'U': -1j\n",
     "    }\n",
+    "    for dir, length, _ in data:\n",
+    "        yield diffs[dir], length\n",
+    "\n",
+    "def decode_2(data):\n",
+    "    diffs = {\n",
+    "        '0': 1,\n",
+    "        '1': 1j,\n",
+    "        '2': -1,\n",
+    "        '3': -1j\n",
+    "    }\n",
+    "    for _, _, hex  in data:\n",
+    "        match = re.match(r'\\(#(.*)\\)', hex)[1]\n",
+    "        n, dir = match[:-1], match[-1]\n",
+    "        yield diffs[dir], int(n, 16)\n",
+    "\n",
+    "def day18(data, decode=decode):\n",
+    "    borders, current = set([0]), 0\n",
+    "    minx, miny, maxx, maxy = 0, 0, 0, 0\n",
     "\n",
     "    area = 0\n",
-    "    for dir, length, color in data:\n",
+    "    for diff, length in decode(data):\n",
     "        length = int(length)\n",
-    "        diff = diffs[dir]\n",
     "        for i in range(length):\n",
     "            current += diff\n",
-    "            borders[current] = color\n",
+    "            borders.add(current)\n",
     "            area += 1\n",
     "        y, x = int(current.imag), int(current.real)\n",
     "        minx, miny, maxx, maxy = min(minx, x), min(miny, y), max(maxx, x), max(maxy, y)\n",
@@ -908,26 +915,6 @@
     "day18(data18)\n",
     "\n",
     "# wrong 43026 too high"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'X' in 'LD'"
    ]
   }
  ],
